fix - update images/songs path

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "Aboreto";
-  src: url("../assets/Aboreto-Regular.ttf");
+  src: url("../public/static/fonts/Aboreto-Regular.ttf");
 }
 
 @font-face {
   font-family: "Poppins";
-  src: url("../assets/Poppins-Regular.ttf");
+  src: url("../public/static/fonts/Poppins-Regular.ttf");
 }
 
 :root {
